Création de la page Unauthorized

--- a/templates/errors/unauthorized.html
+++ b/templates/errors/unauthorized.html
@@ -21,8 +21,8 @@
      </style>
 
      <div class="containers">
-          <h2>404 NOT FOUND</h2>
-          <p>Page introuvable</p>
+          <h2>UNAUTHORIZED</h2>
+          <p>Cette action n'est pas autorisée</p>
      </div>
 
 </body>
