--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -24,6 +24,7 @@ header {
      background-color: white;
      padding: 10px;
      box-shadow:0 0 5px rgba(0,0,0,0.3);
+     z-index:1;
 }
 
 header .logo {
