Création du premier template

--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -7,3 +7,10 @@
 html {
      scroll-behavior: smooth;
 }
+
+.containers {
+     position:absolute;
+     top:10%;
+     left:3%;
+     width:100%;
+}
